--- a/Doutor Estranho/style.css
+++ b/Doutor Estranho/style.css
@@ -67,7 +67,7 @@ body, html {
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
 }
-.quadrado {
+.botaovermelho {
 
     height: 70px;
     width: 300px;
