--- a/Doutor Estranho/style.css
+++ b/Doutor Estranho/style.css
@@ -48,7 +48,7 @@ body, html {
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
-.imagem {
+.fundo2 {
 
     background-image: url(imagens/img1.jpg);
     height: 50%;
