--- a/Superman/style.css
+++ b/Superman/style.css
@@ -1,11 +1,8 @@
-
-
-html, body {
-    margin: 0;
+body, html {
     overflow-x: hidden;
+    margin: 0;
     font-family: Arial;
 }
-
 section {
     width: 100vw;
     display: flex;
@@ -18,68 +15,67 @@ h1 {
 }
 p {
     font-size: 18px;
-    width: 1200px;
+    width: 1000px;
 }
-
-#sinopse {
-    height: 350px;
-}
-
-.botaoSinopse {
-    border-radius: 15px;
-    margin-left: 15px;
-    padding: 5px;
+li {
     list-style: none;
     background: white;
-}
-
-.botaoDisponibilidade{
-    border-radius: 15px;
+    border-radius: 20px;
     margin-left: 15px;
-    padding: 5px;
-    list-style: none;
-    background: white;
+    padding: 10px;
 }
-
+ul {
+    display: flex;
+}
+a {
+    color: #4711C1;
+    text-decoration: none;
+}
 #topo {
-    padding-left: 250px;
-    font-size: 20px;
     width: 100%;
-    height: 70px;
+    height: 80px;
     position: fixed;
-    background:  #4711C1;
+    background: #4711C1;
+    display: flex;
+    flex-direction: row;
+    padding-left: 250px;
     display: flex;
     align-items: center;
     justify-content: start;
+    font-size: 20px;
 }
-
 #topo p {
     font-size: 20px;
     width: auto;
     color: white;
 }
-
-ul {
-    display: flex;
-}
-a {
-    color:  #4711C1;
-    text-decoration: none;
-}
-
 #superman img {
     width: 100%;
     overflow-x: hidden;
 }
-
-#disponibilidade {
-    height: 1200px;
+#sinopse {
+    height: 350px;
 }
-#disponibilidade img {
-    width: 1200px;
+#sinopse h1 {
+    margin-top: 30px;
+}
+#sinopse p {
+    line-height: 40px;
+}
+#dispo {
+    height: 1300px;
+}
+#dispo img {
+    width: 1000px;
+}
+#dispo h1 {
+    margin-top: 30px;
+}
+#dispo p {
+    line-height: 40px;
 }
 .imagens {
-    width: 1200px;
+    width: 1000px;
     display: flex;
     overflow-x: auto;
 }
@@ -87,17 +83,14 @@ a {
     height: 220px;
     margin: 0 20px;
 }
-#quadbaixo {
-    align-items: center;
-}
-#quadbaixo {
+#final {
     height: 50px;
-    background:  #4711C1;
+    background: #4711C1;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-#quadbaixo p {
-    margin-left: 65%;
+#final p {
     color: white;
+    margin-left: 60%;
 }
